--- a/common-strings/src/main/res/values/strings.xml
+++ b/common-strings/src/main/res/values/strings.xml
@@ -1,9 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="_common_strings_confirm">Confirm</string>
     <string name="_common_strings_cancel">Cancel</string>
     <string name="_common_strings_review">Review</string>
     <string name="_common_strings_settings">Settings</string>
     <string name="_common_strings_dismiss">Dismiss</string>
     <string name="_common_strings_feedback">Feedback</string>
     <string name="_common_strings_contact">Contact</string>
+    <string name="_common_strings_menu">Menu</string>
+    <string name="_common_strings_try_again">Try again</string>
+    <string name="_common_strings_import">Import</string>
+    <string name="_common_strings_general">General</string>
+    <string name="_common_strings_theme">Theme</string>
+    <string name="_common_strings_go_back">Go back</string>
+    <string name="_common_strings_device">Device</string>
+    <string name="_common_strings_light_theme">Light theme</string>
+    <string name="_common_strings_dark_theme">Dark theme</string>
 </resources>
